<?xml version="1.0"?>
<package format="3">
  <name>pcl_warping</name>
  <version>0.0.0</version>
  <description>The pcl_warping package</description>

  <maintainer email="you@example.com">your_name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>PCL</depend>
  <depend>Eigen3</depend>
  <depend>pcl_conversions</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
