<?xml version="1.0"?>
<package format="2">
  <name>lidar_downsampling</name>
  <version>0.0.0</version>
  <description>LiDAR Downsampling using Open3D</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>open3d</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
